[FIX] 봉사활동 지원 마감 로직 수정, 마이페이지 툴바 레이아웃 배경 추가

--- a/app/src/main/res/layout/activity_recruit.xml
+++ b/app/src/main/res/layout/activity_recruit.xml
@@ -192,7 +192,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="88dp"
+                    android:layout_marginBottom="52dp"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -206,6 +206,7 @@
             android:background="@color/item_color"
             app:elevation="20dp"
             android:orientation="horizontal"
+            android:visibility="gone"
             android:gravity="center_vertical"
             android:nestedScrollingEnabled="false">
 
