--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -696,7 +696,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/ic_button_green"
                     android:elevation="20dp"
-                    android:text="지원 완료"
+                    android:text="지원완료"
                     android:textSize="16sp"
                     android:layout_marginEnd="20dp"
                     android:layout_gravity="center_vertical"
@@ -722,12 +722,12 @@
                     android:visibility="visible"/>
 
                 <TextView
-                    android:id="@+id/btn_recruit_close"
+                    android:id="@+id/btn_recruit_close_client"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ic_button_green"
                     android:elevation="20dp"
-                    android:text="모집 완료"
+                    android:text="모집마감"
                     android:textSize="16sp"
                     android:layout_marginEnd="20dp"
                     android:layout_gravity="center_vertical"
@@ -737,6 +737,21 @@
                     android:textStyle="bold"
                     android:visibility="invisible"/>
 
+                <TextView
+                    android:id="@+id/btn_recruit_close_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_button_green"
+                    android:elevation="20dp"
+                    android:text="모집완료"
+                    android:textSize="16sp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/sharehands_gray"
+                    android:textStyle="bold"
+                    android:visibility="invisible"/>
             </FrameLayout>
 
 
