--- a/app/src/main/res/drawable/item_user_profile.xml
+++ b/app/src/main/res/drawable/item_user_profile.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <item>
-        <shape android:shape="oval" >
+        <shape android:shape="oval">
             <gradient
                 android:angle="360"
                 android:startColor="#2F7F28"
@@ -19,9 +20,18 @@
         android:right="2dp"
         android:top="2dp">
         <shape android:shape="oval" >
-            <solid android:color="#fff" />
+            <solid android:color="@color/sharehands_gray" />
         </shape>
     </item>
+
+    <item
+        android:drawable="@drawable/ic_profile_default"
+        android:top="8dp"
+        android:bottom="8dp"
+        android:start="8dp"
+        android:end="8dp"/>
+
+
 
 
 
