--- a/app/src/main/res/layout/dialog_profile.xml
+++ b/app/src/main/res/layout/dialog_profile.xml
@@ -9,7 +9,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/profile_background">
+        android:background="@drawable/profile_background"
+        android:layout_marginTop="-2dp">
 
         <ImageView
             android:id="@+id/iv_exit"
