--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -157,6 +157,21 @@
                     android:paddingEnd="20dp"
                     app:layout_constraintTop_toBottomOf="@id/tv_recommend_info" />
 
+                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                    android:id="@+id/viewpager_indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/viewpager_recommend"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:dotsColor="@color/sharehands_gray"
+                    app:dotsCornerRadius="8dp"
+                    app:dotsSize="8dp"
+                    app:dotsSpacing="4dp"
+                    app:dotsWidthFactor="2.5"
+                    app:selectedDotColor="@color/sharehands_green_strong"
+                    app:progressMode="true"/>
+
                 <TextView
                     android:id="@+id/tv_hot_service"
                     android:layout_width="wrap_content"
@@ -169,7 +184,7 @@
                     android:textStyle="bold"
                     android:textColor="@color/text_color"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/viewpager_recommend" />
+                    app:layout_constraintTop_toBottomOf="@id/viewpager_indicator" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_hot_service"
