--- a/app/src/main/res/layout/activity_user_info_write.xml
+++ b/app/src/main/res/layout/activity_user_info_write.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/item_color">
+        android:background="@color/sign_in_color">
 
         <ImageView
             android:id="@+id/btn_back"
