--- a/app/src/main/res/layout/item_service_ranking.xml
+++ b/app/src/main/res/layout/item_service_ranking.xml
@@ -60,12 +60,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="봉사명"
+            android:minLines="2"
+            android:maxLines="2"
+            android:ellipsize="end"
             app:layout_constraintTop_toBottomOf="@id/layout_service_ranking"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:gravity="center"
             android:layout_marginTop="12dp"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:textColor="@color/text_color"
             android:textStyle="bold"
             android:layout_gravity="center"/>
@@ -82,7 +85,7 @@
             android:layout_marginStart="8dp"
             android:layout_gravity="center"
             android:gravity="center_vertical"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/tv_service_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_likes"
