--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="kakao_yellow">#FFFF00</color>
     <color name="btn_gray">#E1E1E1</color>
     <color name="spinner_color">#F2F3F9</color>
+    <color name="sign_in_color">#E7F4E8</color>
 </resources>
