[FIX] 모집한 봉사, 지원한 봉사 모집 마감 분기처리

--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -78,7 +78,7 @@
                             android:layout_marginStart="24dp"
                             android:inputType="text"
                             android:textSize="16sp"
-                            android:textColor="@color/text_color"
+                            android:textColor="@color/sharehands_black"
                             android:background="@null"
                             android:layout_weight="20"
                             android:onTextChanged="@{(s, start, before, count) -> viewModel.onSearchKeywordChanged(s, start, before, count)}"
