--- a/app/src/main/res/drawable/rectangle_search_shadow.xml
+++ b/app/src/main/res/drawable/rectangle_search_shadow.xml
@@ -96,7 +96,7 @@
   <!-- Background -->
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="@color/item_color"/>
+      <solid android:color="#F6F6F6"/>
       <corners android:radius="10dp"/>
       <stroke android:color="@color/sharehands_gray" android:width="2dp"/>
     </shape>
