--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -114,7 +114,7 @@
 
                     <TextView
                         android:id="@+id/tv_user_nickname"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         tools:text="케이엠"
                         android:text="@{viewModel.contents.nickname}"
@@ -123,8 +123,12 @@
                         android:gravity="center_vertical"
                         android:textColor="@color/text_color"
                         android:textStyle="bold"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         app:layout_constraintStart_toEndOf="@id/iv_user_profile"
                         app:layout_constraintTop_toTopOf="@id/iv_user_profile"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="20dp"
                         android:layout_marginStart="12dp"
                         android:textSize="12sp"/>
 
