--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,7 +27,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:background="@drawable/sharehands_toolbar"
                 android:elevation="0dp"
-                app:elevation="32dp">
+                app:elevation="32dp"
+                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -69,8 +70,8 @@
                             android:layout_height="match_parent"
                             android:hint="@string/search_description"
                             android:onTextChanged="@{(s, start, before, count) -> viewModel.onSearchKeywordChanged(s, start, before, count)}"
-                            android:textColorHint="@color/sharehands_gray"
-                            android:textColor="@color/text_color"
+                            android:textColorHint="@color/icon_unfilled"
+                            android:textColor="@color/sharehands_black"
                             android:layout_marginStart="24dp"
                             android:textSize="16sp"
                             android:maxLines="1"
@@ -96,48 +97,56 @@
 
             </com.google.android.material.appbar.AppBarLayout>
 
-
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/nested_scroll_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/layout_service_tab"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"
-                    app:tabMode="scrollable"
-                    app:layout_constraintHorizontal_weight="4"
-                    />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-<!--                <Spinner-->
-<!--                    android:id="@+id/spinner_service_category"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="0dp"-->
-<!--                    android:layout_marginTop="8dp"-->
-<!--                    android:background="@drawable/ic_spinner"-->
-<!--                    android:layout_marginEnd="24dp"-->
-<!--                    app:layout_constraintStart_toEndOf="@id/layout_service_tab"-->
-<!--                    app:layout_constraintTop_toTopOf="@id/layout_service_tab"-->
-<!--                    app:layout_constraintBottom_toBottomOf="@id/layout_service_tab"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintHorizontal_weight="2"/>-->
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/layout_service_tab"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        app:tabMode="scrollable"
+                        app:layout_constraintHorizontal_weight="4"
+                        />
 
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewpager_service"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    app:layout_constraintTop_toBottomOf="@id/layout_service_tab"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    <!--                <Spinner-->
+                    <!--                    android:id="@+id/spinner_service_category"-->
+                    <!--                    android:layout_width="0dp"-->
+                    <!--                    android:layout_height="0dp"-->
+                    <!--                    android:layout_marginTop="8dp"-->
+                    <!--                    android:background="@drawable/ic_spinner"-->
+                    <!--                    android:layout_marginEnd="24dp"-->
+                    <!--                    app:layout_constraintStart_toEndOf="@id/layout_service_tab"-->
+                    <!--                    app:layout_constraintTop_toTopOf="@id/layout_service_tab"-->
+                    <!--                    app:layout_constraintBottom_toBottomOf="@id/layout_service_tab"-->
+                    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+                    <!--                    app:layout_constraintHorizontal_weight="2"/>-->
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/viewpager_service"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        app:layout_constraintTop_toBottomOf="@id/layout_service_tab"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.core.widget.NestedScrollView>
+
 
 
         </LinearLayout>
