--- a/app/src/main/res/layout/item_service_applied.xml
+++ b/app/src/main/res/layout/item_service_applied.xml
@@ -195,17 +195,31 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/iv_apply_cancel"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:src="@drawable/ic_apply_cancel"
-        android:padding="4dp"
-        />
+        android:layout_marginEnd="24dp">
+
+        <ImageView
+            android:id="@+id/iv_apply_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_apply_cancel"
+            android:padding="4dp"
+            />
+
+        <ImageView
+            android:id="@+id/iv_apply_expired"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_expired"
+            android:padding="4dp"
+            android:visibility="gone"/>
+    </FrameLayout>
+
 
     <View
         android:id="@+id/view_line"
