--- a/app/src/main/res/layout/item_user_applied.xml
+++ b/app/src/main/res/layout/item_user_applied.xml
@@ -100,18 +100,21 @@
 
 
         <FrameLayout
+            android:id="@+id/layout_review"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btn_reject"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="24dp"
+            android:layout_marginTop="8dp"
+            android:padding="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/btn_permit_review"
-                android:layout_width="92dp"
-                android:layout_height="32dp"
-                android:padding="2dp"
+                android:layout_width="96dp"
+                android:layout_height="28dp"
+                android:padding="6dp"
                 app:tint="@color/sharehands_green_weak"
                 android:background="@drawable/ic_service_accept"
                 android:backgroundTint="@color/sharehands_green_weak"
@@ -135,6 +138,18 @@
 <!--                />-->
 
         </FrameLayout>
+
+        <ImageView
+            android:id="@+id/btn_reject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_reject_apply"
+            app:layout_constraintTop_toBottomOf="@id/layout_review"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/layout_review"
+            app:layout_constraintEnd_toEndOf="@id/layout_review"
+            android:layout_marginBottom="6dp"
+            android:padding="6dp"/>
 
 
 
