--- a/app/src/main/res/layout/item_user_recruit.xml
+++ b/app/src/main/res/layout/item_user_recruit.xml
@@ -96,16 +96,17 @@
         android:id="@+id/layout_review"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toTopOf="@id/btn_reject">
 
         <ImageView
             android:id="@+id/iv_review_allow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:padding="6dp"
             android:src="@drawable/ic_review_allow"
             android:visibility="visible" />
 
@@ -113,11 +114,23 @@
             android:id="@+id/iv_review_ban"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:padding="6dp"
             android:src="@drawable/ic_review_ban"
             android:visibility="gone" />
 
     </FrameLayout>
+
+    <ImageView
+        android:id="@+id/btn_reject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_reject_apply"
+        app:layout_constraintTop_toBottomOf="@id/layout_review"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/layout_review"
+        app:layout_constraintEnd_toEndOf="@id/layout_review"
+        android:layout_marginBottom="6dp"
+        android:padding="6dp"/>
 
 
 
