--- a/app/src/main/res/layout/activity_recruit.xml
+++ b/app/src/main/res/layout/activity_recruit.xml
@@ -80,7 +80,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_current_num"
+                        android:id="@+id/tv_current_num_applied"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         tools:text="0"
