--- a/app/src/main/res/layout/item_user_applied.xml
+++ b/app/src/main/res/layout/item_user_applied.xml
@@ -105,8 +105,7 @@
             app:layout_constraintBottom_toTopOf="@id/btn_reject"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="24dp"
-            android:layout_marginTop="8dp"
-            android:padding="6dp"
+            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -116,13 +115,11 @@
                 android:layout_height="28dp"
                 android:padding="6dp"
                 app:tint="@color/sharehands_green_weak"
-                android:background="@drawable/ic_service_accept"
-                android:backgroundTint="@color/sharehands_green_weak"
+                android:background="@drawable/ic_allow_reviews"
                 android:gravity="center"
                 android:textColor="@color/icon_unfilled"
                 android:textSize="12sp"
-                android:textStyle="bold"
-                android:text="리뷰 허용" />
+                android:textStyle="bold" />
 
 <!--            <TextView-->
 <!--                android:id="@+id/btn_ban_review"-->
@@ -144,12 +141,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_reject_apply"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/layout_review"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/layout_review"
-            app:layout_constraintEnd_toEndOf="@id/layout_review"
-            android:layout_marginBottom="6dp"
-            android:padding="6dp"/>
+            app:layout_constraintEnd_toEndOf="@id/layout_review" />
 
 
 
