--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -3,21 +3,128 @@
     <data>
 
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="준비중입니다."
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:background="@drawable/sharehands_toolbar"
+            android:elevation="12dp"
+            app:elevation="24dp"
+            app:layout_insetEdge="start">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:elevation="0dp">
+
+                <ImageView
+                    android:id="@+id/iv_go_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_back_dir"
+                    app:tint="@color/sharehands_black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="FAQ"
+                    android:textColor="@color/sharehands_black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+
+            </Toolbar>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/item_color"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <TextView
+                android:id="@+id/tv_faq_title1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:text="Q. 추천 봉사는 어떠한 기준으로 제공되는 것인가요?"
+                android:textColor="@color/text_color"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_faq_info1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="케이엠   2023. 06. 02"
+                app:layout_constraintTop_toBottomOf="@id/tv_faq_title1"
+                app:layout_constraintStart_toStartOf="@id/tv_faq_title1"
+                android:layout_marginTop="12dp"/>
+
+            <TextView
+                android:id="@+id/tv_faq_detail1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="20sp"
+                android:text="관심사로 설정하신 봉사중에 최신 봉사들 중 랜덤으로 5개 표출됩니다."
+                android:textColor="@color/text_color"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/tv_faq_title1"
+                app:layout_constraintTop_toBottomOf="@id/tv_faq_info1" />
+
+            <TextView
+                android:id="@+id/tv_faq_title2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="36dp"
+                android:layout_marginEnd="20dp"
+                android:text="Q. 봉사자 랭킹은 어떻게 반영되는 것인가요?"
+                android:textColor="@color/text_color"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_faq_detail1"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_faq_info2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="케이엠   2023. 06. 02"
+                app:layout_constraintTop_toBottomOf="@id/tv_faq_title2"
+                app:layout_constraintStart_toStartOf="@id/tv_faq_title2"
+                android:layout_marginTop="12dp"/>
+
+            <TextView
+                android:id="@+id/tv_faq_detail2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="20sp"
+                android:text="봉사 참여 횟수를 중심으로 산정됩니다."
+                android:textColor="@color/text_color"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/tv_faq_title2"
+                app:layout_constraintTop_toBottomOf="@id/tv_faq_info2" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
