--- a/app/src/main/res/layout/activity_app_info.xml
+++ b/app/src/main/res/layout/activity_app_info.xml
@@ -19,14 +19,17 @@
             <Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:elevation="0dp">
+                app:elevation="0dp"
+                android:contentInsetStart="0dp">
 
                 <ImageView
                     android:id="@+id/iv_go_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
+                    android:padding="20dp"
+                    android:layout_marginStart="8dp"
                     android:src="@drawable/ic_back_dir"
+                    android:background="?android:attr/selectableItemBackground"
                     app:tint="@color/sharehands_black" />
 
                 <TextView
