--- a/app/src/main/res/layout/activity_monthly_calendar.xml
+++ b/app/src/main/res/layout/activity_monthly_calendar.xml
@@ -44,6 +44,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="20dp"
+                        android:background="?android:attr/selectableItemBackground"
                         android:layout_marginStart="8dp"
                         android:src="@drawable/ic_back_black"
                         app:layout_constraintBottom_toBottomOf="parent"
