--- a/app/src/main/res/layout/activity_report_service.xml
+++ b/app/src/main/res/layout/activity_report_service.xml
@@ -27,7 +27,8 @@
                     android:layout_height="wrap_content"
                     android:padding="6dp"
                     android:src="@drawable/ic_out"
-                    app:tint="@color/sharehands_black" />
+                    app:tint="@color/sharehands_black"
+                    android:background="?android:attr/selectableItemBackground"/>
 
                 <TextView
                     android:layout_width="wrap_content"
