--- a/app/src/main/res/layout/activity_review_detail.xml
+++ b/app/src/main/res/layout/activity_review_detail.xml
@@ -34,7 +34,8 @@
                     android:layout_marginStart="16dp"
                     android:padding="20dp"
                     android:src="@drawable/ic_back_dir"
-                    app:tint="@color/sharehands_black" />
+                    app:tint="@color/sharehands_black"
+                    android:background="?android:attr/selectableItemBackground"/>
 
                 <TextView
                     android:id="@+id/tv_review_title"
