--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -32,7 +32,8 @@
                     android:layout_height="wrap_content"
                     android:padding="10dp"
                     android:src="@drawable/ic_back_dir"
-                    app:tint="@color/sharehands_black" />
+                    app:tint="@color/sharehands_black"
+                    android:background="?android:attr/selectableItemBackground"/>
 
                 <TextView
                     android:layout_width="wrap_content"
