--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -100,7 +100,8 @@
                             <FrameLayout
                                 android:id="@+id/frame_user_nickname"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                android:background="?android:attr/selectableItemBackground">
 
                                 <TextView
                                     android:id="@+id/tv_user_login"
@@ -148,7 +149,8 @@
                                 android:layout_height="wrap_content"
                                 android:padding="8dp"
                                 android:src="@drawable/ic_forward_dir"
-                                app:tint="@color/sharehands_black" />
+                                app:tint="@color/sharehands_black"
+                                android:background="?android:attr/selectableItemBackground"/>
 
                         </LinearLayout>
 
@@ -720,7 +722,8 @@
                             android:padding="8dp"
                             android:text="로그아웃"
                             android:textColor="@color/text_color"
-                            android:textSize="16sp" />
+                            android:textSize="16sp"
+                            android:background="?android:attr/selectableItemBackground"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -738,7 +741,8 @@
                             android:padding="8dp"
                             android:text="회원탈퇴"
                             android:textColor="@color/text_color"
-                            android:textSize="16sp" />
+                            android:textSize="16sp"
+                            android:background="?android:attr/selectableItemBackground"/>
                     </LinearLayout>
 
                     <TextView
@@ -749,6 +753,7 @@
                         android:gravity="center"
                         android:padding="8dp"
                         android:text="로그인 / 회원가입"
+                        android:background="?android:attr/selectableItemBackground"
                         android:textColor="@color/text_color"
                         android:textSize="16sp" />
 
