[FIX] 지원자 모집 마감 레이아웃 오류 수정 및 리뷰 스크롤 방식 변경

--- a/app/src/main/res/layout/activity_review_detail.xml
+++ b/app/src/main/res/layout/activity_review_detail.xml
@@ -34,8 +34,7 @@
                     android:layout_marginStart="16dp"
                     android:padding="20dp"
                     android:src="@drawable/ic_back_dir"
-                    app:tint="@color/sharehands_black"
-                    android:background="?android:attr/selectableItemBackground"/>
+                    app:tint="@color/sharehands_black" />
 
                 <TextView
                     android:id="@+id/tv_review_title"
