--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -31,11 +31,13 @@
                 app:contentInsetStart="0dp"
                 android:background="@android:color/transparent"
                 app:elevation="0dp"
+                app:contentScrim="@color/sharehands_green_weak"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    app:layout_collapseMode="parallax">
 
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/viewpager_thumbnails"
@@ -62,18 +64,28 @@
                         app:tabPaddingEnd="@dimen/dot_padding"
                         app:tabPaddingStart="@dimen/dot_padding" />
 
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/tool_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_collapseMode="pin">
+
                     <ImageView
                         android:id="@+id/btn_back"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:padding="24dp"
+                        android:padding="8dp"
                         android:background="?android:attr/selectableItemBackground"
                         android:src="@drawable/ic_back_black" />
 
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.appcompat.widget.Toolbar>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
