[FIX] 리뷰 리스트 중복 나타남 오류 해결

--- a/app/src/main/res/layout/activity_review_detail.xml
+++ b/app/src/main/res/layout/activity_review_detail.xml
@@ -254,10 +254,19 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="40dp">
 
+<!--                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
+<!--                        android:id="@+id/refresh_layout"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp">-->
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_reviews"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
+
+<!--                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+
+
 
                     <ProgressBar
                         android:id="@+id/progress_review"
