--- a/app/src/main/res/layout/activity_daily_calendar.xml
+++ b/app/src/main/res/layout/activity_daily_calendar.xml
@@ -17,7 +17,9 @@
             android:id="@+id/layout_monthly_app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/sharehands_toolbar">
+            android:background="@drawable/sharehands_toolbar"
+            android:elevation="0dp"
+            app:elevation="20dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
